Update performance, fix typo words